cumulative big commit after many changes

--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,10 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "css",
             "assets": [
+                  {
+      "glob": "**/*",
+      "input": "public"
+    },
               {
                 "glob": "**/*",
                 "input": "public"
