--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
-    "@tailwindcss/postcss": "^4.1.11",
+    "cheerio": "^1.1.2",
     "jwt-decode": "^4.0.0",
-    "postcss": "^8.5.6",
+    "ngx-cookie-service": "^20.1.0",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
