--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.2.2",
     "@angular/common": "^20.1.0",
     "@angular/compiler": "^20.1.0",
     "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.0",
+    "@angular/material": "^20.2.2",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
-    "cheerio": "^1.1.2",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^20.1.0",
     "rxjs": "~7.8.0",
